# python-backend-sample

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  tasks.py
app/: dependencies.py  main.py
app/alembic/: env.py
app/alembic/versions/: 7cae82440164_add_unique_constraint_to_title.py  dc8263accd76_change_title_length_in_vocabularies_.py  f2a3464bb123_create_vocabularies_table.py
app/api/: main.py
app/api/routes/: vocabularies.py
app/core/: config.py  database.py  logger.py
app/crud/: vocabulary.py
app/models/: vocabulary.py
app/schemas/: vocabulary.py
